Adding privacy policy.

--- a/VoteWithYourWallet.Web/Components/Pages/Details.razor
+++ b/VoteWithYourWallet.Web/Components/Pages/Details.razor
@@ -210,7 +210,7 @@
             }
             
             <footer>
-                <p>&copy; Copyright 2025, Joshua Shane Martin</p>
+                <p>&copy; Copyright 2025, Joshua Shane Martin | <a href="/Privacy">Privacy Policy</a></p>
             </footer>
         </div>
     </RadzenBody>
