--- a/VoteWithYourWallet.Web/Components/Pages/Home.razor
+++ b/VoteWithYourWallet.Web/Components/Pages/Home.razor
@@ -45,11 +45,17 @@
                         
                         <div class="col-md-9 col-xs-12">
                             <p class="mt-md-2 mb-md-5 p-3 d-none d-md-block" style="font-size: 2rem; line-height: 2.5rem;">
-                                <abbr title="Vote With Your Wallet">VWYW</abbr> is a crowdsourced, peer reviewed database of social responsibility scores for organizations. You deserve to know where your hard-earned money is being spent.
+                                <abbr title="Vote With Your Wallet">VWYW</abbr>
+                                is a crowdsourced, peer reviewed database of social responsibility scores for retailers and brands, including: whether they implement Diversity, Equity, and Inclusion policies, whether they support or discourage unions and labor protections, whether they have environmental and climate responsibility policies, and how they've supported legislation or political movements.
+
+                                You deserve to know how your hard-earned money is being spent.
                             </p>
                             
                             <p class="mt-md-2 mb-md-5 p-3 d-md-none" style="font-size: 1.1rem; line-height: 1.5rem;">
-                                <abbr title="Vote With Your Wallet">VWYW</abbr> is a crowdsourced, peer reviewed database of social responsibility scores for organizations. You deserve to know where your hard-earned money is being spent.
+                                <abbr title="Vote With Your Wallet">VWYW</abbr>
+                                is a crowdsourced, peer reviewed database of social responsibility scores for retailers and brands, including: whether they implement Diversity, Equity, and Inclusion policies, whether they support or discourage unions and labor protections, whether they have environmental and climate responsibility policies, and how they've supported legislation or political movements.
+
+                                You deserve to know how your hard-earned money is being spent.
                             </p>
                             
                             <p class="mt-md-5 mb-md-2 p-3 d-none d-md-block" style="font-size: 1.5em; line-height: 1.5em; font-style: italic;">
@@ -65,24 +71,11 @@
                             </p>
                         </div>
                     </div>
-                    
-                    @* <div class="d-flex flex-wrap justify-content-start mb-3 d-none d-md-inline-flex"> *@
-                    @*     <RadzenLink Path="Retailers" Text="View Retailers" Icon="storefront" class="vwyw-nav-link d-flex align-items-center"/> *@
-                    @*     <RadzenLink Path="Brands" Text="View Brands" Icon="box" class="vwyw-nav-link d-flex align-items-center"/> *@
-                    @*     <RadzenLink Path="Subjects/Add" Text="Add" Icon="add" class="vwyw-nav-link d-flex align-items-center"/> *@
-                    @* </div> *@
-                    @* *@
-                    @* <div class="d-flex flex-wrap justify-content-start mb-3 d-md-none"> *@
-                    @*     <RadzenLink Path="Retailers" Text="Retailers" Icon="storefront" class="vwyw-nav-link vwyw-nav-link-sm d-flex align-items-center"/> *@
-                    @*     <RadzenLink Path="Brands" Text="Brands" Icon="box" class="vwyw-nav-link vwyw-nav-link-sm d-flex align-items-center"/> *@
-                    @*     <RadzenLink Path="Subjects/Add" Text="Add" Icon="add" class="vwyw-nav-link vwyw-nav-link-sm d-flex align-items-center"/> *@
-                    @* </div> *@
-
                 </div>
             </div>
 
             <footer>
-                <p>&copy; Copyright 2025, Joshua Shane Martin</p>
+                <p>&copy; Copyright 2025, Joshua Shane Martin | <a href="/Privacy">Privacy Policy</a></p>
             </footer>
         </div>
     </RadzenBody>
