--- a/VoteWithYourWallet.Web/Components/Pages/AddSubject.razor
+++ b/VoteWithYourWallet.Web/Components/Pages/AddSubject.razor
@@ -97,7 +97,7 @@
             </div>
 
             <footer>
-                <p>&copy; Copyright 2025, Joshua Shane Martin</p>
+                <p>&copy; Copyright 2025, Joshua Shane Martin | <a href="/Privacy">Privacy Policy</a></p>
             </footer>
         </div>
     </RadzenBody>
