Adding app download buttons. Cleaning up details interface.

--- a/VoteWithYourWallet.Web/Components/Pages/AddSubject.razor
+++ b/VoteWithYourWallet.Web/Components/Pages/AddSubject.razor
@@ -98,6 +98,15 @@
 
             <footer>
                 <p>&copy; Copyright 2025, Joshua Shane Martin | <a href="/Privacy">Privacy Policy</a></p>
+                <p>
+                    <a href="https://play.google.com/store/apps/details?id=app.withyourwallet.vote&hl=en_US">
+                        <img src="badge.webp" alt="Download on Google Play Store" style="height: 3rem;" />
+                    </a>
+
+                    <a href="https://apps.apple.com/us/app/vote-with-your-wallet/id6741499797">
+                        <img src="badge-example-preferred_2x.webp" alt="Download on the Apple App Store" style="height: 3rem;" />
+                    </a>
+                </p>
             </footer>
         </div>
     </RadzenBody>
