--- a/VoteWithYourWallet.Web/Components/Pages/Details.razor
+++ b/VoteWithYourWallet.Web/Components/Pages/Details.razor
@@ -87,24 +87,30 @@
                                 @foreach (var score in _diversityScores)
                                 {
                                     <li class="mt-3">
-                                        <p class="mt-0 mb-0">
-                                            @switch (score.Number)
-                                            {
-                                                case 1:
-                                                    <strong style="color: red;">NEGATIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                case 3:
-                                                    <strong style="color: green;">POSITIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                default:
-                                                    <strong style="color: gray;">NEUTRAL SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                            }
-                                        </p>
-                                        <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;"><a href="@(score.SourceUrl)">View Source</a> reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                        <div class="d-flex align-items-center">
+                                            <div class="d-flex  d-inline-flex">
+                                                @switch (score.Number)
+                                                {
+                                                    case 1:
+                                                        <RadzenIcon Icon="cancel" IconColor="@Colors.Danger" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    case 3:
+                                                        <RadzenIcon Icon="add_circle" IconColor="@Colors.Success" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    default:
+                                                        <RadzenIcon Icon="do_not_disturb_on" IconColor="@Colors.Black" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                }
+                                            </div>
+                                            <div>
+                                                <p class="mt-0 mb-0">
+                                                    <a href="@(score.SourceUrl)" style="text-decoration: none;">
+                                                        @score.Headline
+                                                    </a>
+                                                </p>
+                                                <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;">Reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                            </div>
+                                        </div>
                                     </li>
                                 }
                             </ul>
@@ -119,24 +125,30 @@
                                 @foreach (var score in _environmentalScores)
                                 {
                                     <li class="mt-3">
-                                        <p class="mt-0 mb-0">
-                                            @switch (score.Number)
-                                            {
-                                                case 1:
-                                                    <strong style="color: red;">NEGATIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                case 3:
-                                                    <strong style="color: green;">POSITIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                default:
-                                                    <strong style="color: gray;">NEUTRAL SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                            }
-                                        </p>
-                                        <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;"><a href="@(score.SourceUrl)">View Source</a> reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                        <div class="d-flex align-items-center">
+                                            <div class="d-flex  d-inline-flex">
+                                                @switch (score.Number)
+                                                {
+                                                    case 1:
+                                                        <RadzenIcon Icon="cancel" IconColor="@Colors.Danger" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    case 3:
+                                                        <RadzenIcon Icon="add_circle" IconColor="@Colors.Success" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    default:
+                                                        <RadzenIcon Icon="do_not_disturb_on" IconColor="@Colors.Black" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                }
+                                            </div>
+                                            <div>
+                                                <p class="mt-0 mb-0">
+                                                    <a href="@(score.SourceUrl)" style="text-decoration: none;">
+                                                        @score.Headline
+                                                    </a>
+                                                </p>
+                                                <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;">Reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                            </div>
+                                        </div>
                                     </li>
                                 }
                             </ul>
@@ -151,24 +163,30 @@
                                 @foreach (var score in _unionScores)
                                 {
                                     <li class="mt-3">
-                                        <p class="mt-0 mb-0">
-                                            @switch (score.Number)
-                                            {
-                                                case 1:
-                                                    <strong style="color: red;">NEGATIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                case 3:
-                                                    <strong style="color: green;">POSITIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                default:
-                                                    <strong style="color: gray;">NEUTRAL SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                            }
-                                        </p>
-                                        <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;"><a href="@(score.SourceUrl)">View Source</a> reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                        <div class="d-flex align-items-center">
+                                            <div class="d-flex  d-inline-flex">
+                                                @switch (score.Number)
+                                                {
+                                                    case 1:
+                                                        <RadzenIcon Icon="cancel" IconColor="@Colors.Danger" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    case 3:
+                                                        <RadzenIcon Icon="add_circle" IconColor="@Colors.Success" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    default:
+                                                        <RadzenIcon Icon="do_not_disturb_on" IconColor="@Colors.Black" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                }
+                                            </div>
+                                            <div>
+                                                <p class="mt-0 mb-0">
+                                                    <a href="@(score.SourceUrl)" style="text-decoration: none;">
+                                                        @score.Headline
+                                                    </a>
+                                                </p>
+                                                <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;">Reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                            </div>
+                                        </div>
                                     </li>
                                 }
                             </ul>
@@ -183,24 +201,30 @@
                                 @foreach (var score in _politicsScores)
                                 {
                                     <li class="mt-3">
-                                        <p class="mt-0 mb-0">
-                                            @switch (score.Number)
-                                            {
-                                                case 1:
-                                                    <strong style="color: red;">NEGATIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                case 3:
-                                                    <strong style="color: green;">POSITIVE SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                                default:
-                                                    <strong style="color: gray;">NEUTRAL SCORE</strong>
-                                                    <i>@score.Headline</i>
-                                                    break;
-                                            }
-                                        </p>
-                                        <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;"><a href="@(score.SourceUrl)">View Source</a> reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                        <div class="d-flex align-items-center">
+                                            <div class="d-flex  d-inline-flex">
+                                                @switch (score.Number)
+                                                {
+                                                    case 1:
+                                                        <RadzenIcon Icon="cancel" IconColor="@Colors.Danger" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    case 3:
+                                                        <RadzenIcon Icon="add_circle" IconColor="@Colors.Success" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                    default:
+                                                        <RadzenIcon Icon="do_not_disturb_on" IconColor="@Colors.Black" Style="margin-right: 0.75rem;"/>
+                                                        break;
+                                                }
+                                            </div>
+                                            <div>
+                                                <p class="mt-0 mb-0">
+                                                    <a href="@(score.SourceUrl)" style="text-decoration: none;">
+                                                        @score.Headline
+                                                    </a>
+                                                </p>
+                                                <p class="mt-0 mb-0 text-muted" style="font-size: .8rem;">Reported by @(score.CreatedByUser!.Name) at @(score.CreatedAt.ToString("MMM d, yyyy h:mm tt"))</p>
+                                            </div>
+                                        </div>
                                     </li>
                                 }
                             </ul>
@@ -211,6 +235,15 @@
             
             <footer>
                 <p>&copy; Copyright 2025, Joshua Shane Martin | <a href="/Privacy">Privacy Policy</a></p>
+                <p>
+                    <a href="https://play.google.com/store/apps/details?id=app.withyourwallet.vote&hl=en_US">
+                        <img src="badge.webp" alt="Download on Google Play Store" style="height: 3rem;" />
+                    </a>
+
+                    <a href="https://apps.apple.com/us/app/vote-with-your-wallet/id6741499797">
+                        <img src="badge-example-preferred_2x.webp" alt="Download on the Apple App Store" style="height: 3rem;" />
+                    </a>
+                </p>
             </footer>
         </div>
     </RadzenBody>
