--- a/VoteWithYourWallet.Web/Components/App.razor
+++ b/VoteWithYourWallet.Web/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="@Assets["VoteWithYourWallet.Web.styles.css"]"/>
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <RadzenTheme Theme="Material" @rendermode="InteractiveServer" />
     <link rel="stylesheet" href="@Assets["app.css"]"/>
     <HeadOutlet/>
