Adding robots file. Disabling captcha for now because of bug. Adding override page.

--- a/VoteWithYourWallet.Web/Components/App.razor
+++ b/VoteWithYourWallet.Web/Components/App.razor
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <RadzenTheme Theme="Material" @rendermode="InteractiveServer" />
     <link rel="stylesheet" href="@Assets["app.css"]"/>
+    <link href="_content/BlazorCaptcha/captcha.css" rel="stylesheet" />
     <HeadOutlet/>
 </head>
 
